--- a/html/dashboard.html
+++ b/html/dashboard.html
@@ -1,258 +1,321 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Dashboard</title>
-    <style>
-      body {
-        font-family: Arial, sans-serif;
-        background: #f4f4f4;
-        margin: 0;
-        padding: 0;
-      }
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Dashboard</title>
+  <style>
+    body {
+      font-family: Arial, sans-serif;
+      margin: 0;
+      display: flex;
+      height: 100vh;
+      overflow: hidden;
+    }
 
-      .card.selected {
-        background-color: #c8f7c5; /* light green */
-      }
+    header {
+      position: absolute;
+      top: 0;
+      left: 0;
+      width: 100%;
+      background-color: #2c3e50;
+      color: white;
+      padding: 20px;
+      text-align: center;
+      z-index: 10;
+    }
 
-      header {
-        background-color: #2c3e50;
-        color: white;
-        padding: 20px;
-        text-align: center;
-      }
+    .layout {
+      display: flex;
+      width: 100%;
+      margin-top: 80px;
+    }
 
-      .container {
-        padding: 20px;
-        display: grid;
-        grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
-        gap: 20px;
-      }
+    .dropzone {
+      width: 300px;
+      padding: 10px;
+      background: #ecf0f1;
+      border-right: 2px solid #bdc3c7;
+      overflow-y: auto;
+    }
 
-      .card-grid {
-        display: grid;
-        grid-template-columns: repeat(2, 1fr);
-        gap: 20px;
-      }
+    .dropzone h2 {
+      font-size: 1.2rem;
+      margin-top: 0;
+    }
 
-      @media (min-width: 768px) {
-        .card-grid {
-          grid-template-columns: repeat(6, 1fr);
-        }
-      }
+    .card-container {
+      flex: 1;
+      padding: 20px;
+      display: grid;
+      grid-template-columns: repeat(auto-fill, minmax(300px, 1fr));
+      gap: 20px;
+      overflow-y: auto;
+    }
 
-      .card {
-        background-color: white;
-        border-radius: 12px;
-        overflow: hidden;
-        box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
-        transition: transform 0.2s, box-shadow 0.2s;
-      }
+    .card {
+      background-color: white;
+      border-radius: 12px;
+      box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+      overflow: hidden;
+      padding: 10px;
+    }
 
-      .card:hover {
-        transform: translateY(-4px);
-        box-shadow: 0 6px 12px rgba(0, 0, 0, 0.15);
-      }
+    .card img {
+      width: 100%;
+      height: 150px;
+      object-fit: contain;
+      background-color: #eee;
+    }
 
-      .card img {
-        width: 100%;
-        height: 100px;
-        object-fit: cover;
-      }
+    .card-content {
+      padding: 10px 0;
+    }
 
-      .card-content {
-        padding: 10px;
-      }
+    .card-title {
+      font-size: 1.2rem;
+      font-weight: bold;
+    }
 
-      .card-title {
-        font-size: 1rem;
-        font-weight: bold;
-        margin: 0 0 5px;
-      }
+    .card-description {
+      font-size: 1rem;
+      color: #555;
+    }
 
-      .card-description {
-        font-size: 0.9rem;
-        color: #555;
-        margin: 0;
-      }
+    .card-input, .sports-dropdown {
+      width: 100%;
+      padding: 8px;
+      margin-top: 10px;
+      font-size: 1rem;
+      border: 1px solid #ccc;
+      border-radius: 6px;
+    }
 
-      .card img {
-        width: 100%;
-        height: 150px;
-        object-fit: contain;
-        background-color: #eee;
-      }
+    .dropzone-card {
+      display: flex;
+      align-items: center;
+      justify-content: space-between;
+      background-color: #eaf6ff;
+      border: 1px solid #ccc;
+      border-radius: 8px;
+      padding: 8px 12px;
+      margin-bottom: 10px;
+      font-size: 0.9rem;
+      box-shadow: 2px 2px 5px rgba(0,0,0,0.1);
+      cursor: move;
+    }
 
-      .card-input {
-        width: 100%;
-        padding: 8px;
-        margin-top: 8px;
-        border: 1px solid #ccc;
-        border-radius: 6px;
-        font-size: 14px;
-      }
-    </style>
-  </head>
-  <body>
-    <header>
-      <h1>Welcome, <span id="username">User</span>!</h1>
-    </header>
+    .dropzone-card img {
+      height: 30px;
+      width: 30px;
+      object-fit: contain;
+      margin-right: 10px;
+    }
 
-    <div class="card-grid">
-      <div class="card" data-preference="news">
-        <img src="./images/NewsIcon.jpg" alt="Module Image" />
-        <div class="card-content">
-          <div class="card-title">News</div>
-          <p class="card-description">Top 10 news stories.</p>
-        </div>
-      </div>
+    .dropzone-card .info {
+      flex: 1;
+      display: flex;
+      flex-direction: column;
+    }
 
-      <div class="card" data-preference="sports">
-        <img src="./images/PremierLeague.jpg" alt="Module Image" />
-        <div class="card-content">
-          <div class="card-title">League Table</div>
-          <p class="card-description">Shows the chosen league table.</p>
-          <select class="sports-dropdown">
-            <option value="">Select your leauge</option>
-            <option value="PL">Premier League</option>
-            <option value="ELC">Championship</option>
-            <option value="EL1">League One</option>
-            <option value="EL2">League Two</option>
-            <option value="PD">La Liga</option>
-            <option value="SA">Serie A</option>
-            <option value="BL1">Bundesliga</option>
-            <option value="FL1">Ligue 1</option>
-            <option value="DED">Eredivisie</option>
-            <option value="PPL">Primeira Liga</option>
-            <option value="BSA">Serie A (Brazil)</option>
-            <option value="ARGPD">Liga Profesional (Argentina)</option>
-            <option value="MLS">Major League Soccer</option>
-          </select>
-        </div>
-      </div>
+    .dropzone-card .title {
+      font-weight: bold;
+      margin-bottom: 2px;
+    }
 
-      <div class="card" data-preference="weather">
-        <img src="./images/Weather.jpg" alt="Module Image" />
-        <div class="card-content">
-          <div class="card-title">Weather</div>
-          <p class="card-description">Hourly weather forecast for the day.</p>
-          <input
-            type="text"
-            class="card-input"
-            placeholder="Enter city or location"
-          />
-        </div>
-      </div>
+    .dropzone-card .detail {
+      font-size: 0.8rem;
+      color: #555;
+    }
 
-      <div class="card" data-preference="cats">
-        <img src="./images/Cats.jpg" alt="Module Image" />
-        <div class="card-content">
-          <div class="card-title">Cats</div>
-          <p class="card-description">Random daily picture of gif of cats.</p>
-        </div>
-      </div>
+    .remove-btn {
+      cursor: pointer;
+      font-size: 1.2rem;
+      color: #a00;
+      margin-left: 12px;
+    }
+  </style>
+</head>
+<body>
+  <header>
+    <h1>Welcome, <span id="username">User</span>!</h1>
+  </header>
+
+  <div class="layout">
+    <div class="dropzone" id="dropzone">
+      <h2>My Dashboard</h2>
     </div>
 
-    <script>
-      document.addEventListener("DOMContentLoaded", () => {
-        const token = localStorage.getItem("token");
+    <div class="card-container" id="module-palette">
+      <!-- Cards loaded from backend -->
+    </div>
+  </div>
 
-        if (!token) {
-          window.location.href = "/login.html";
-          return;
+  <script>
+    document.addEventListener("DOMContentLoaded", () => {
+      const token = localStorage.getItem("token");
+      if (!token) {
+        return window.location.href = "/login.html";
+      }
+
+      fetch("/api/userinfo", {
+        method: "POST",
+        headers: {
+          "Content-Type": "application/json",
+          "Authorization": `Bearer ${token}`
         }
+      })
+      .then(res => res.json())
+      .then(user => document.getElementById("username").textContent = user.fullName);
 
-        const cards = document.querySelectorAll(".card");
+      const dropzone = document.getElementById("dropzone");
+      const modulePalette = document.getElementById("module-palette");
+      let draggedCard = null;
 
-        cards.forEach((card) => {
-          const pref = card.dataset.preference;
-          const isSports = pref === "sports";
-          const isWeather = pref === "weather";
+      fetch("/api/modules")
+        .then(res => res.json())
+        .then(modules => {
+          modules.forEach(mod => {
+            const card = document.createElement("div");
+            card.className = "card";
+            card.setAttribute("data-preference", mod.ID);
+            card.innerHTML = `
+              <img src="${mod.Image}" alt="${mod.Title}" />
+              <div class="card-content">
+                <div class="card-title">${mod.Title}</div>
+                <div class="card-description">${mod.Description}</div>
+              </div>
+            `;
 
-          const dropdown = isSports
-            ? card.querySelector(".sports-dropdown")
-            : null;
-          const input = isWeather ? card.querySelector(".card-input") : null;
-
-          // Prevent click events from bubbling up from inputs
-          if (dropdown) {
-            dropdown.addEventListener("click", (e) => e.stopPropagation());
-            dropdown.addEventListener("change", (e) => e.stopPropagation());
-          }
-
-          if (input) {
-            input.addEventListener("click", (e) => e.stopPropagation());
-            input.addEventListener("input", (e) => e.stopPropagation());
-          }
-
-          card.addEventListener("click", () => {
-            if (isSports) {
-              if (!dropdown || !dropdown.value) {
-                alert("Please select a team before selecting the sports card.");
-                return;
-              }
+            if (mod.NeedsInput && mod.InputType === "text") {
+              const input = document.createElement("input");
+              input.className = "card-input";
+              input.placeholder = mod.InputLabel;
+              card.querySelector(".card-content").appendChild(input);
             }
 
-            if (isWeather) {
-              const city = input.value.trim();
-              if (!city) {
-                alert(
-                  "Please enter a city or location before selecting the weather card."
-                );
-                return;
-              }
-            }
-
-            // Toggle selection state
-            const selected = card.classList.toggle("selected");
-
-            // Rebuild ordered lists
-            const preferences = [];
-            const extraData = [];
-
-            cards.forEach((c) => {
-              if (!c.classList.contains("selected")) return;
-
-              const p = c.dataset.preference;
-              preferences.push(p);
-
-              if (p === "sports") {
-                const val = c.querySelector(".sports-dropdown")?.value || "";
-                extraData.push(val);
-              } else if (p === "weather") {
-                const val = c.querySelector(".card-input")?.value.trim() || "";
-                extraData.push(val);
-              } else {
-                extraData.push(""); // Default for other modules
-              }
-            });
-
-            // Final payload
-            const payload = {
-              preferences,
-              extraData,
-            };
-
-            fetch("/api/preferences", {
-              method: "POST",
-              headers: {
-                Authorization: "Bearer " + token,
-                "Content-Type": "application/json",
-              },
-              body: JSON.stringify(payload),
-            })
-              .then((res) => {
-                if (!res.ok) {
-                  console.error("Failed to save preferences");
-                }
-              })
-              .catch((err) => {
-                console.error("Network error:", err);
+            if (mod.NeedsInput && mod.InputType === "select") {
+              const select = document.createElement("select");
+              select.className = "sports-dropdown";
+              select.innerHTML = `<option value="">${mod.InputLabel}</option>`;
+              mod.Options.forEach(opt => {
+                select.innerHTML += `<option value="${opt}">${opt}</option>`;
               });
+              card.querySelector(".card-content").appendChild(select);
+            }
+
+            card.setAttribute("draggable", "true");
+            card.addEventListener("dragstart", () => {
+              if (mod.NeedsInput) {
+                if (mod.InputType === "text") {
+                  const val = card.querySelector(".card-input").value.trim();
+                  if (!val) return alert("Please enter value first.");
+                }
+                if (mod.InputType === "select") {
+                  const val = card.querySelector(".sports-dropdown").value;
+                  if (!val) return alert("Please select an option first.");
+                }
+              }
+              draggedCard = card;
+            });
+            card.addEventListener("dragend", () => draggedCard = null);
+
+            modulePalette.appendChild(card);
           });
         });
+
+      dropzone.addEventListener("dragover", e => e.preventDefault());
+      dropzone.addEventListener("drop", e => {
+        e.preventDefault();
+        if (!draggedCard) return;
+
+        const clone = document.createElement("div");
+        const pref = draggedCard.dataset.preference;
+        clone.className = "dropzone-card";
+        clone.setAttribute("data-preference", pref);
+
+        const img = draggedCard.querySelector("img").cloneNode(true);
+        clone.appendChild(img);
+
+        const info = document.createElement("div");
+        info.className = "info";
+
+        const title = document.createElement("div");
+        title.className = "title";
+        title.textContent = draggedCard.querySelector(".card-title").textContent;
+
+        const detail = document.createElement("div");
+        detail.className = "detail";
+        const input = draggedCard.querySelector(".card-input");
+        const select = draggedCard.querySelector(".sports-dropdown");
+
+        if (input) {
+          detail.textContent = `City: ${input.value.trim()}`;
+          clone.setAttribute("data-extra", input.value.trim());
+        } else if (select) {
+          const val = select.value;
+          detail.textContent = `Option: ${val}`;
+          clone.setAttribute("data-extra", val);
+        } else {
+          detail.textContent = "No extra input";
+          clone.setAttribute("data-extra", "");
+        }
+
+        info.appendChild(title);
+        info.appendChild(detail);
+        clone.appendChild(info);
+
+        const removeBtn = document.createElement("div");
+        removeBtn.className = "remove-btn";
+        removeBtn.textContent = "×";
+        removeBtn.onclick = () => {
+          clone.remove();
+          syncDashboard();
+        };
+        clone.appendChild(removeBtn);
+
+        clone.setAttribute("draggable", "true");
+        clone.addEventListener("dragstart", () => clone.classList.add("dragging"));
+        clone.addEventListener("dragend", () => {
+          clone.classList.remove("dragging");
+          syncDashboard();
+        });
+
+        dropzone.appendChild(clone);
+        syncDashboard();
       });
-    </script>
-  </body>
+
+      dropzone.addEventListener("dragover", (e) => {
+        e.preventDefault();
+        const dragging = dropzone.querySelector(".dragging");
+        const afterElement = [...dropzone.querySelectorAll(".dropzone-card:not(.dragging)")]
+          .reduce((closest, child) => {
+            const box = child.getBoundingClientRect();
+            const offset = e.clientY - box.top - box.height / 2;
+            return offset < 0 && offset > closest.offset ? { offset, element: child } : closest;
+          }, { offset: Number.NEGATIVE_INFINITY }).element;
+        if (afterElement) {
+          dropzone.insertBefore(dragging, afterElement);
+        } else {
+          dropzone.appendChild(dragging);
+        }
+      });
+
+      function syncDashboard() {
+        const modules = [...dropzone.querySelectorAll(".dropzone-card")];
+        const preferences = modules.map(m => m.dataset.preference);
+        const extraData = modules.map(m => m.dataset.extra || "");
+
+        fetch("/api/preferences", {
+          method: "POST",
+          headers: {
+            "Authorization": `Bearer ${token}`,
+            "Content-Type": "application/json",
+          },
+          body: JSON.stringify({ preferences, extraData }),
+        });
+      }
+    });
+  </script>
+</body>
 </html>
