--- a/html/login.html
+++ b/html/login.html
@@ -4,17 +4,30 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Login</title>
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.7/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+      integrity="sha384-LN+7fdVzj6u52u30Kp6M/trliBMCMKTyK833zpbD+pXdCLuTusPj697FH4R/5mcr"
+      crossorigin="anonymous"
+    />
     <style>
+      html {
+        background-color: #8d8d8d;
+      }
       body {
         font-family: Arial, sans-serif;
-        background: #1e1e1e;
-        color: white;
+        background-color: #8d8d8d;
+        color: rgb(255, 255, 255);
         padding: 20px;
+      }
+      .bg-body-tertiary {
+        --bs-bg-opacity: 1;
+        background-color: #8d8d8d !important;
       }
       form {
         max-width: 400px;
         margin: auto;
-        background: #2e2e2e;
+        background: #8d8d8d;
         padding: 20px;
         border-radius: 8px;
       }
@@ -47,18 +60,62 @@
       }
     </style>
   </head>
-  <body>
-    <form id="loginForm">
-      <h2>Login</h2>
-      <label>Email:</label>
-      <input type="email" id="email" required />
+  <body class="d-flex align-items-center py-4 bg-body-tertiary">
+    <main class="form-signin w-100 m-auto">
+      <form id="loginForm">
+        <img
+          class="mb-4"
+          src="https://getbootstrap.com/docs/5.3/assets/brand/bootstrap-logo.svg"
+          alt="Bootstrap Logo"
+          width="72"
+          height="57"
+        />
+        <h1 class="h3 mb-3 fw-normal">Please sign in</h1>
 
-      <label>Password:</label>
-      <input type="password" id="password" required />
+        <div class="form-floating">
+          <input
+            type="email"
+            class="form-control"
+            id="email"
+            placeholder="name@example.com"
+            autocomplete="email"
+            aria-label="Email"
+          />
+          <label for="email">Email address</label>
+        </div>
 
-      <button type="submit">Login</button>
-      <div class="error" id="error"></div>
-    </form>
+        <div class="form-floating">
+          <input
+            type="password"
+            class="form-control"
+            id="password"
+            placeholder="Password"
+            autocomplete="current-password"
+            aria-label="Password"
+          />
+          <label for="password">Password</label>
+        </div>
+
+        <div class="form-check text-start my-3">
+          <input
+            class="form-check-input"
+            type="checkbox"
+            value="remember-me"
+            id="checkDefault"
+          />
+          <label class="form-check-label" for="checkDefault">
+            Remember me
+          </label>
+        </div>
+
+        <button class="btn btn-primary w-100 py-2" type="submit">
+          Sign in
+        </button>
+
+        <p class="mt-5 mb-3 text-body-secondary">© 2017–2025</p>
+        <div class="error" id="error"></div>
+      </form>
+    </main>
 
     <script>
       const form = document.getElementById("loginForm");
@@ -97,5 +154,11 @@
         }
       });
     </script>
+
+    <script
+      src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.7/dist/js/bootstrap.bundle.min.js"
+      integrity="sha384-ndDqU0Gzau9qJ1lfW4pNLlhNTkCfHzAVBReH9diLvGRem5+R9g2FzA8ZGN954O5Q"
+      crossorigin="anonymous"
+    ></script>
   </body>
 </html>
